Bug 44458, enable XHTML entities when an XHTML doctype with public id is present in an XML document. r=rbs@maths.uq.edu.au, sr=jst.